--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-12 ms-auto"><p class="lead">I'm a full stack web developer skilled in Ruby on Rails, React, and Javascript. I am interested in working with a team of developers whom I can share expertise and problem solve with. I am very open to learning any new technologies required to do the job.          
-                    </p></div>
-                    <div class="col-lg-12 me-auto"><p class="lead">Outside of coding, I have a pretty wide range of interests including a background in visual art, audio engineering, theatre, and education.</p></div>
+                    <div class="col-lg-12 me-auto"><p class="lead">Outside of coding, I have a pretty wide range of interests including a background in visual art, audio engineering, theatre, and education.</p></div> 
+            
                 </div> 
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer text-center">
+        <footer class="footer text-center" id="contact">
             <div class="container">
                 <div class="row">
                     <!-- Footer Location-->
@@ -161,7 +161,8 @@
                         </p>
                     </div> -->
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-12 mb-5 mb-lg-0">
+
+                    <div class="col-lg-12 mb-5 mb-lg-0" >
                         <h4 class="text-uppercase mb-4">Connect with me</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fa-brands fa-github"></i></a>
