--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-md bg-secondary text-uppercase fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-sm bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
                 <!-- <a class="navbar-brand" href="#page-top">Tao Liu</a> -->
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,9 +29,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
+                        <li class="nav-item mx-1 mx-lg-1"><a class="nav-link py-3 px-3 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item mx-1 mx-lg-1"><a class="nav-link py-3 px-3 px-lg-3 rounded" href="#about">About</a></li>
+                        <li class="nav-item mx-1 mx-lg-1"><a class="nav-link py-3 px-3 px-lg-3 rounded" href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                 <div class="row">
                     <div class="col-lg-12 me-auto"><p class="lead">Core skillset: React, Javascript, Ruby on Rails, Node.js, SQL, Postgres, HTML5/CSS, Git.</p></div> 
                     <div class="col-lg-12 ms-auto"><p class="lead">I'm a full stack web developer skilled in Ruby on Rails, React, and Javascript. I am interested in working with a team of developers whom I can share expertise and problem solve with. I am very open to learning any new technologies required to do the job.          
-                    <div class="col-lg-12 me-auto"><p class="lead">Outside of coding, I have a pretty wide range of interests including a background in visual art, audio engineering, theatre, and education.</p></div>
+                    <div class="col-lg-12 me-auto"><p class="lead">Outside of coding, I have a background in art and 3D modeling: <a  href="https://www.behance.net/tliu32" target="_blank">behance.net/tliu32</a>.</p></div>
                     
                     
                 </div> 
@@ -158,15 +158,11 @@
                     <div class="modal-body text-center pb-5">
                         <div class="container">
                             <div class="row justify-content-center">
-                                <div class="col-lg-8">
-                                    <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Talky</h2>
-                                    <!-- Icon Divider-->
-                                    <div class="divider-custom">
-                                        <div class="divider-custom-line"></div>
-                                    </div>
+                                <div class="col-lg-8"> 
+
+                                    <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/talky-discussion-board.jpg" alt="..." /> 
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is a discussion forum with a upvote/downvote feature. It is a personal portfolio project. Built using:<br/><br/>
+                                    <p class="mb-4">This is a discussion forum with a upvote/downvote feature. It is a personal portfolio project. Built in 2023 using:<br/><br/>
                                         React client + Material UI<br/>                                         
                                         Rails API<br/>
                                         PostgresSQL<br/><br/>
@@ -194,18 +190,20 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
-                                    <!-- Icon Divider-->
-                                    <div class="divider-custom">
-                                        <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                        <div class="divider-custom-line"></div>
-                                    </div>
-                                    <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />
+                                     <!-- Portfolio Modal - Image-->
+                                     <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/react-art-gallery.jpg" alt="..." />
+
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">This is an image gallery website. It is a personal portfolio project. Built in 2023 using:
+                                        <br/><br/>
+                                        React client + Material UI<br/>                                         
+                                        Rails API<br/>
+                                        PostgresSQL<br/>
+                                        Uses the https://www.clevelandart.org/ API to seed image data.<br/><br/>
+
+                                        <a href='https://github.com/taoliu12/artgallery-react-rails' target='_blank'>Github</a><br/>
+                                        <a href='https://artgallery-react-rails.onrender.com' target='_blank'>LIVE DEMO</a><br/>
+                                    </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -226,23 +224,20 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
-                                    <!-- Icon Divider-->
-                                    <div class="divider-custom">
-                                        <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                        <div class="divider-custom-line"></div>
-                                    </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="..." />
-                                    <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal">
-                                        <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
-                                    </button>
-                                </div>
+                                    <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/fwpaec.jpg" alt="..." />
+
+                                   <!-- Portfolio Modal - Text-->
+                                   <p class="mb-4">I designed and built the Wordpress site for the Federal Way Performing Arts Center, a 700 seat theatre and multi-space rental venue.
+                                    <br/><br/>
+
+                                       <a href='https://www.fwpaec.org' target='_blank'>www.fwpaec.org</a><br/>
+                                   </p>
+                                   <button class="btn btn-primary" data-bs-dismiss="modal">
+                                       <i class="fas fa-xmark fa-fw"></i>
+                                       Close Window
+                                   </button>
+                               </div>
                             </div>
                         </div>
                     </div>
