--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/talky-discussion-board.jpg" alt="..." />
                         </div>
+                        <div class='portfolio-item-subheading mt-2' style="text-align: center">
+                            <p>2023 - Discussion Board</p>
+                        </div>
                     </div>
                     <!-- Portfolio Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -81,6 +84,9 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/react-art-gallery.jpg" alt="..." />
+                        </div>
+                        <div class='portfolio-item-subheading mt-2' style="text-align: center">
+                            <p>2023 - Art Gallery</p>
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -91,6 +97,9 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/fwpaec.jpg" alt="..." />
                         </div>
+                        <div class='portfolio-item-subheading mt-2' style="text-align: center">
+                            <p>2018 - Performing Arts Center</p>
+                        </div>
                     </div>
                     <!-- Portfolio Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -99,6 +108,10 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/yyyl.jpg" alt="..." />
+                        </div>
+                        
+                        <div class='portfolio-item-subheading mt-2' style="text-align: center">
+                            <p>2016 - Remote Medical Diagnostics</p>
                         </div>
                     </div>
                 </div>
@@ -231,7 +244,7 @@
                                     <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/fwpaec.jpg" alt="..." />
 
                                    <!-- Portfolio Modal - Text-->
-                                   <p class="mb-4">2018 - I designed and built the Wordpress site for the Federal Way Performing Arts Center, a 700 seat theatre and multi-space rental venue. I also heavily customized a PHP plugin to fetch RSS data.
+                                   <p class="mb-4">2018 - I designed and built the Wordpress site for the Federal Way Performing Arts Center, a 700 seat theatre and multi-space rental venue. It also contained an ASP.NET CMS called "AudienceView." I also heavily customized a PHP plugin to fetch RSS data.
                                     <br/><br/>
 
                                        <a href='https://www.fwpaec.org' target='_blank'>www.fwpaec.org</a><br/>
@@ -257,13 +270,13 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/yyyl.jpg" alt="..." />
+                                    <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/YYYL_fullpage.jpg" alt="..." />
 
                                    <!-- Portfolio Modal - Text-->
                                    <p class="mb-4">2016 - While at Ubertopia, I designed and built the frontend for a remote medical diagnosis website. It ran on React and Ruby on Rails.
                                     <br/><br/>
 
-                                       <a href='https://www.behance.net/gallery/61145071/Remote-medical-diagnosis-website-design' target='_blank'>Full Screenshot</a><br/>
+                                       <!-- <a href='https://www.behance.net/gallery/61145071/Remote-medical-diagnosis-website-design' target='_blank'>Full Screenshot</a><br/> -->
                                    </p>
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
                                        <i class="fas fa-xmark fa-fw"></i>
