--- a/index.html
+++ b/index.html
@@ -175,16 +175,19 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8"> 
-
-                                    <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/talky-discussion-board.jpg" alt="..." /> 
+                                    <a href='https://talky.onrender.com' target='_blank'>
+                                        <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/talky-discussion-board.jpg" alt="..." /> 
+                                    </a>
                                     <!-- Portfolio Modal - Text-->
+                                    <p class="mb-4">
+                                        <a href='https://github.com/taoliu12/discussion-board-rails-react' target='_blank'>Github</a><br/>
+                                        <a href='https://talky.onrender.com' target='_blank'>LIVE DEMO</a><br/>
+                                    </p>  
                                     <p class="mb-4">2023 - This is a discussion forum with a upvote/downvote feature. It is a personal portfolio project. Built using:<br/><br/>
                                         React client + Material UI<br/>                                         
                                         Rails API<br/>
                                         PostgresSQL<br/><br/>
                                         
-                                        <a href='https://github.com/taoliu12/discussion-board-rails-react' target='_blank'>Github</a><br/>
-                                        <a href='https://talky.onrender.com' target='_blank'>LIVE DEMO</a><br/>
                                     </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
@@ -207,9 +210,16 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                      <!-- Portfolio Modal - Image-->
-                                     <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/react-art-gallery.jpg" alt="..." />
+                                     <a href='https://github.com/taoliu12/artgallery-react-rails' target='_blank'>
+                                         <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/react-art-gallery.jpg" alt="..." />
+                                     </a>
 
                                     <!-- Portfolio Modal - Text-->
+                                    <p class="mb-4">
+                                        <a href='https://github.com/taoliu12/artgallery-react-rails' target='_blank'>Github</a><br/>
+                                        <a href='https://artgallery-react-rails.onrender.com' target='_blank'>LIVE DEMO</a><br/>
+
+                                    </p>
                                     <p class="mb-4">2023 - This is an image gallery website. It is a personal portfolio project. Built using:
                                         <br/><br/>
                                         React client + Material UI<br/>                                         
@@ -217,8 +227,6 @@
                                         PostgresSQL<br/>
                                         Uses the https://www.clevelandart.org/ API to seed image data.<br/><br/>
 
-                                        <a href='https://github.com/taoliu12/artgallery-react-rails' target='_blank'>Github</a><br/>
-                                        <a href='https://artgallery-react-rails.onrender.com' target='_blank'>LIVE DEMO</a><br/>
                                     </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
@@ -241,10 +249,12 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/fwpaec.jpg" alt="..." />
+                                    <a href='https://www.fwpaec.org' target='_blank'>
+                                        <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/fwpaec.jpg" alt="..." />
+                                    </a>
 
                                    <!-- Portfolio Modal - Text-->
-                                   <p class="mb-4">2018 - I designed and built the Wordpress site for the Federal Way Performing Arts Center, a 700 seat theatre and multi-space rental venue. It also contained an ASP.NET CMS called "AudienceView." I also heavily customized a PHP plugin to fetch RSS data.
+                                   <p class="font-weight-bold mb-4">2018 - I designed and built the Wordpress site for the Federal Way Performing Arts Center, a 700 seat theatre and multi-space rental venue. It also contained an ASP.NET CMS called "AudienceView." I also heavily customized a PHP plugin to fetch RSS data.
                                     <br/><br/>
 
                                        <a href='https://www.fwpaec.org' target='_blank'>www.fwpaec.org</a><br/>
