--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Rock+Salt&display=swap" rel="stylesheet">
+
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link href="css/styles.css" rel="stylesheet" />
@@ -42,7 +47,7 @@
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/img/profile_pic.jpg" alt="..." />
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Tao Liu</h1>
+                <h1 class="masthead-heading text-uppercase mb-3">Tao Liu</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -130,7 +135,6 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-12 me-auto"><p class="lead">Core skillset: React, Javascript, Ruby on Rails, Node.js, SQL, Postgres, HTML5/CSS, Git.</p></div> 
                     <div class="col-lg-12 ms-auto"><p class="lead">I'm a full stack web developer skilled in Ruby on Rails, React, and Javascript. I am interested in working with a team of developers whom I can share expertise and problem solve with. I am very open to learning any new technologies required to do the job.          
                     <div class="col-lg-12 me-auto"><p class="lead">Outside of coding, I have a background in art and 3D modeling: <a  href="https://www.behance.net/tliu32" target="_blank">behance.net/tliu32</a>.</p></div>
                 </div> 
@@ -151,20 +155,22 @@
                     </div> -->
                     <!-- Footer Social Icons-->
 
-                    <div class="col-lg-12 mb-5 mb-lg-0" >
+                    <div class="col-lg-12 mb-2 mb-lg-0" >
                         <h4 class="text-uppercase mb-4">Connect with me</h4>
+
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/tao-liu-228105176/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/taoliu12" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        
 
+                        <div class="text-center text-white" style="
+                        margin-top: 90px;">
+                            <small>Copyright &copy; Tao Liu 2023</small>
+                        </div>
                     </div>
-                    <!-- Footer About Text--> 
                 </div>
             </div>
         </footer>
-        <!-- Copyright Section--> 
-        <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Tao Liu 2023</small></div>
-        </div>
+
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-labelledby="portfolioModal1" aria-hidden="true">
