--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">
                                         <a href='https://github.com/taoliu12/discussion-board-rails-react' target='_blank'>Github</a><br/>
-                                        <a href='https://discussion-board.onrender.com/' target='_blank'>LIVE DEMO</a><br/>
+                                        <a href='https://talky.onrender.com' target='_blank'>LIVE DEMO</a><br/>
                                     </p>  
                                     <p class="mb-4">2023 - This is a discussion forum with a upvote/downvote feature. It is a personal portfolio project. Built using:<br/><br/>
                                         React client + Material UI<br/>                                         
