--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8"> 
-                                    <a href='https://discussion-board.onrender.com/' target='_blank'>
+                                    <a href='https://talky.onrender.com/' target='_blank'>
                                         <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/talky-discussion-board.jpg" alt="..." /> 
                                     </a>
                                     <!-- Portfolio Modal - Text-->
