--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     
                         Now I look to join a company as a web developer. I hope to work with a great team whom I can share expertise and problem solve with. I'm very open to learning any new tech required to do the job.<br/><br/>
                         
-                        Outside of coding, I have a background in art and 3D modeling: <a  href="https://www.behance.net/tliu32" target="_blank">behance.net/tliu32</a>.</p>
+                        Outside of coding, I have a background in traditional and digital art: <a  href="https://www.behance.net/tliu32" target="_blank">behance.net/tliu32</a>.</p>
                     </div>
                 </div> 
             </div>
