--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
                                         <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/talky-discussion-board.jpg" alt="..." /> 
                                     </a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">
-                                        <a href='https://talky.onrender.com' target='_blank'>LIVE DEMO</a><br/><br/>
+                                    <h5 class="mb-4">
+                                        <a href='https://talky.onrender.com' target='_blank'>LIVE DEMO</a>  |  
                                         <a href='https://github.com/taoliu12/discussion-board-rails-react' target='_blank'>Github</a><br/>
-                                    </p>  
+                                    </h5>  
                                     <p class="mb-4">2023 - This is a discussion forum with a upvote/downvote feature. It is a personal portfolio project. Built using:<br/><br/>
                                         React client + Material UI<br/>                                         
                                         Rails API<br/>
@@ -226,11 +226,11 @@
                                      </a>
 
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">
-                                        <a href='https://artgallery-react.onrender.com/' target='_blank'>LIVE DEMO</a><br/><br/>
+                                    <h5 class="mb-4">
+                                        <a href='https://artgallery-react.onrender.com/' target='_blank'>LIVE DEMO</a>  |  
                                         <a href='https://github.com/taoliu12/artgallery-react-rails' target='_blank'>Github</a><br/>
 
-                                    </p>
+                                    </h5>
                                     <p class="mb-4">2023 - This is an image gallery website. It is a personal portfolio project. Built using:
                                         <br/><br/>
                                         React client + Material UI<br/>                                         
