--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
-                    <div class="col-md-6 col-lg-4 mb-5">
+                    <!-- <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal3">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -105,9 +105,9 @@
                         <div class='portfolio-item-subheading mt-2' style="text-align: center">
                             <p>2018 - Performing Arts Center</p>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Portfolio Item 4-->
-                    <div class="col-md-6 col-lg-4 mb-5">
+                    <!-- <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -118,7 +118,7 @@
                         <div class='portfolio-item-subheading mt-2' style="text-align: center">
                             <p>2016 - Remote Medical Diagnostics</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -169,7 +169,7 @@
 
                         <div class="text-center text-white" style="
                         margin-top: 90px;">
-                            <small>Made using Bootstrap.<br/>   Tao Liu 2023</small>
+                            <small>Tao Liu 2023</small>
                         </div>
                     </div>
                 </div>
