--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-12 ms-auto">
-                        <p class="lead">Hi <span class="wave">👋</span> I'm Tao, a full stack developer foremost skilled in React, Javascript, Ruby on Rails, Wordpress, SQL, HTML/CSS, but also various other languages and frameworks. <br/><br/>
+                        <p class="lead">Hi <span class="wave">👋</span> I'm Tao, a full stack developer foremost skilled in React, Typescript, Javascript, Ruby on Rails, SQL, and HTML/CSS, but also various other languages and frameworks. <br/><br/>
                         
                         I had a lot experience creating websites in high school. In college, I studied biology, then switched to theatre & art. After graduation, I worked as a server admin for a web hosting company, and then as a web developer for a startup, using React & Ruby on Rails. Later, I did Wordpress development for an arts and events venue. I attended a coding bootcamp in 2018, and then stayed because I had ideals to pursue education and teaching.<br/><br/>
                     
