--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
                         Most recently, I’ve been working as a contract web developer, taking on clients such as Stanford University. Before that, I've worked as a server administrator for a web hosting company, and then as a web developer for a startup, using React & Ruby on Rails. Later, I did Wordpress development for an arts and events venue. I attended a coding bootcamp in 2018, and then stayed because I had ideals to pursue education and teaching.
                         <br/><br/>
                         
-                        Now I look to join a company as a web developer. I hope to work with a great team whom I can share expertise and problem solve with. I have skills across the entire stack.<br/><br/>
+                        I have the skills needed to build, test, and deploy production web apps that are fast, secure, scalable, and visually appealing with great user experience.
+<br/><br/>
                     </div>
                 </div> 
             </div>
