--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="col-lg-12 ms-auto">
                         <p class="lead">Hi <span class="wave">👋</span> I'm Tao, a full stack developer foremost skilled in React, Typescript, Javascript, Ruby on Rails, SQL, and HTML/CSS, but also various other languages and frameworks. <br/><br/>
                         
-                        Most recently, I’ve been working as a contract web developer, taking on clients such as Stanford University. Before that, I've worked as a server administrator for a web hosting company, and then as a web developer for a startup, using React & Ruby on Rails. Later, I did Wordpress development for an arts and events venue. I attended a coding bootcamp in 2018, and then stayed because I had ideals to pursue education and teaching.
+                        Most recently, I’ve been working as a contract web developer, taking on clients such as Stanford University. Before that, I've worked as a server administrator for a web hosting company, and then as a web developer for a consulting agency, using React & Ruby on Rails. Later, I did Wordpress development for an arts and events venue. I attended a coding bootcamp in 2018, and then stayed because I had ideals to pursue education and teaching.
                         <br/><br/>
                         
                         I have the skills needed to build, test, and deploy production web apps that are fast, secure, scalable, and visually appealing with great user experience. I hope to work with a great team whom I can share expertise and problem solve with.
