--- a/index.html
+++ b/index.html
@@ -218,13 +218,13 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                      <!-- Portfolio Modal - Image-->
-                                     <a href='https://artgallery-react.onrender.com/' target='_blank'>
+                                     <a href='https://artgallery-react-client.vercel.app' target='_blank'>
                                          <img class="img-fluid img-within-modal mb-3" src="assets/img/portfolio/react-art-gallery.jpg" alt="..." />
                                      </a>
 
                                     <!-- Portfolio Modal - Text-->
                                     <h5 class="mb-4">
-                                        <a href='https://artgallery-react.onrender.com/' target='_blank'>LIVE DEMO</a>  |  
+                                        <a href='https://artgallery-react-client.vercel.app' target='_blank'>LIVE DEMO</a>  |  
                                         <a href='https://github.com/taoliu12/artgallery-react-rails' target='_blank'>Github</a><br/>
 
                                     </h5>
