--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                     <p class="mb-4">2023 - This is a discussion forum with a upvote/downvote feature. It is a personal portfolio project. Built using:<br/><br/>
                                         React client + Material UI<br/>                                         
                                         Rails API<br/>
-                                        PostgresSQL<br/><br/>
+                                        PostgreSQL<br/><br/>
                                         
                                     </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -232,7 +232,7 @@
                                         <br/><br/>
                                         React client + Material UI<br/>                                         
                                         Rails API<br/>
-                                        PostgresSQL<br/>
+                                        PostgreSQL<br/>
                                         Uses the https://www.clevelandart.org/ API to seed image data.<br/><br/>
 
                                     </p>
