--- a/index.html
+++ b/index.html
@@ -315,7 +315,8 @@
 
                                 <!-- Portfolio Modal - Text-->
                                 <h5 class="mb-4">
-                                    <a href='https://project-home.jale-team.com/' target='_blank'>LIVE DEMO</a>
+                                    COMING SOON
+                                    <!-- <a href='https://project-home.jale-team.com/' target='_blank'>LIVE DEMO</a> -->
                                     <br />
                                 </h5>
                                 <p class="font-weight-bold mb-4">I built a Next.js, Payload CMS, and MongoDB community
@@ -324,6 +325,7 @@
                                     <br /><br />
 
                                     This site includes a fully responsive frontend built with SASS and some Material-UI.
+                                    The backend is powered by Payload CMS, a Node.js content management system.
                                 </p>
                                 <br /><br />
 
