--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                                     conjunction with the Roots Community Health Center in East Oakland.
                                     <br /><br />
 
-                                    This site includes a fully responsive frontend built with SASS and some Material-UI.
+                                    This site includes a fully responsive frontend built with Next.js, SASS, and Material UI.
                                     The backend is powered by Payload CMS, a Node.js content management system.
                                 </p>
                                 <br /><br />
