--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <a href='https://talky.onrender.com/' target='_blank'>
+                                <a href='https://talkyapi.taoliudev.net/' target='_blank'>
                                     <img class="img-fluid img-within-modal mb-3"
                                         src="assets/img/portfolio/talky-discussion-board.jpg" alt="..." />
                                 </a>
                                 <!-- Portfolio Modal - Text-->
                                 <h5 class="mb-4">
-                                    <a href='https://talky.onrender.com' target='_blank'>LIVE DEMO</a> |
+                                    <a href='https://talkyapi.taoliudev.net' target='_blank'>LIVE DEMO</a> |
                                     <a href='https://github.com/taoliu12/discussion-board-rails-react'
                                         target='_blank'>Github</a><br />
                                 </h5>
